fixed css error
minor bug with chrome scrollbar and border-color fixed

--- a/css/layout.css
+++ b/css/layout.css
@@ -157,7 +157,6 @@ p.center {
 }
 #page #middle .scroll {
   overflow-y: auto;
-  overflow-x:hidden;
   -webkit-overflow-scrolling: touch;
   width: 100%;
   height: 0;
