--- a/css/theme/base-theme.css
+++ b/css/theme/base-theme.css
@@ -2,13 +2,10 @@
   width: 5px;
   height: 5px;
 }
-#page #top,
-#page #bottom,
-#page #middle h2 a:hover,
-#page #middle h2 a:hover,
 ::-webkit-scrollbar-thumb {
-  background-color: #3b3b3b;
+    background-color: #3b3b3b; /* seperate since its only for chrome */
 }
+
 body {
   background-color: #808080;
 }
@@ -16,9 +13,20 @@ a {
   color: #000;
 }
 #page #top,
+#page #bottom,
+#page #middle h2 a:hover,
+#page #middle h2 a:hover {
+  background-color: #3b3b3b;
+}
+#page #top,
 #page #bottom {
-  border-color: #808080;
   color: #fff;
+}
+#page #top,
+#page #bottom,
+#page #middle #left > .table,
+#page #middle #right > .table {
+  border-color: #808080!important;
 }
 #page #middle h2,
 #page #middle input[type=button],
@@ -65,8 +73,4 @@ a {
 #page #middle #left .grid > div > div,
 #page #middle #right .grid > div > div {
   border-color: #ddd;
-}
-#page #middle #left > .table,
-#page #middle #right > .table {
-  border-color: #808080;
 }
