--- a/less/layout-theme.less
+++ b/less/layout-theme.less
@@ -2,12 +2,14 @@
     width: 5px;
     height: 5px;
 }
+::-webkit-scrollbar-thumb {
+    background-color: #3b3b3b;
+}
 
 #page #top,
 #page #bottom,
 #page #middle h2 a:hover,
-#page #middle h2 a:hover,
-::-webkit-scrollbar-thumb {
+#page #middle h2 a:hover {
     background-color: #3b3b3b;
 }
 
